manifests/apps/media/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita-svc
  namespace: media
  labels:
    app: media-manager
    component: kavita
spec:
  selector:
    app: media-manager
    component: kavita
  ports:
  - port: 5000
    name: webui
    protocol: TCP
