manifests/apps/media/kavita/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - read.frias.app
      secretName: read-frias-app-tls
  rules:
    - host: read.frias.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita-svc
                port:
                  number: 5000
